--- a/ProEventos/Front/ProEventos-App/src/app/app.component.scss
+++ b/ProEventos/Front/ProEventos-App/src/app/app.component.scss
@@ -1,4 +1,4 @@
-<style >
+//<style >
 :host {
   --bright-blue: oklch(51.01% 0.274 263.83);
   --electric-violet: oklch(53.18% 0.28 296.97);
@@ -150,4 +150,4 @@ main {
   }
 }
 
-</style >
+//</style >
